frontend_tests/negative/call_argument_type/go.mod
module example.com/renvotests/negative/call_argument_type

go 1.25
